JSON Table alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -321,6 +321,9 @@ input {
 }
 
 /* Slick Nav CSS */
+.text-center {
+  text-align: center !important;
+}
 .slicknav_menu {
     display:none;
 }
